<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".BubbleSorting" >

    <EditText
        android:id="@+id/edTxt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/hint" >

        <requestFocus />
    </EditText>
    
    <Button
        android:id="@+id/btnSubmit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/edTxt1"
        android:layout_below="@+id/edTxt1"
        android:layout_marginTop="19dp"
        android:text="@string/submit" />
    
    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edTxt1"
        android:layout_below="@+id/btnSubmit1"
        android:layout_marginTop="29dp"
        android:textColor="@color/white"
        android:text="" />

    <Button
        android:id="@+id/btnSort1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtDisplay"
        android:layout_below="@+id/txtDisplay"
        android:layout_marginTop="26dp"
        android:text="@string/sort" />

    <TextView
        android:id="@+id/txtSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDisplay"
        android:layout_below="@+id/btnSort1"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/sort" />

    <Button
        android:id="@+id/btan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/bban" />
    
	<android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone" />
    
	

</RelativeLayout>
